--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,9 @@ html
     link(rel='stylesheet', href='/css/default.css')
     block links    
   body
+    - if (loggedIn) {
+    a(href="/signout") Sign out
+    - }
     div.container
         block content
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js')
