--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,10 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+    div.container
+        h1 Kwota.io
+        div                    
+            button.btn.btn-primary(onclick="window.location='/signup'") Sign up for free
+            br
+            small or 
+            a(href="/signin") Sign in
