--- a/views/home.jade
+++ b/views/home.jade
@@ -1,10 +1,10 @@
 extends layout
 
 block content
-    div.container
-        h1 Kwota.io
-        div
-            a(href="/systems") My Systems
-            br
-            a(href="/systems/create") New System
-            br
+    h1 Kwota.io
+    div
+        a(href="/systems") My Systems
+        br
+        a(href="/systems/create") New System
+        br
+        a(href="/signout") Sign out
