--- a/views/home.jade
+++ b/views/home.jade
@@ -1,10 +1,19 @@
 extends layout
 
 block content
-    h1 Kwota.io
-    div
-        a(href="/systems") My Systems
-        br
-        a(href="/systems/create") New System
-        br
-        a(href="/signout") Sign out
+    div.col-lg-2
+        ul
+            for system in systems
+                li
+                    a(href="/?system=" + system._id)=system.name
+
+            li
+                a(href="/") All Systems
+            li
+                a(href="/systems/create") Create System            
+            li
+                a(href="/systems") Manage Systems
+    div.col-lg-10
+        for quota in quotas
+            div.col-lg-12
+                p I must #{quota.action} at least #{quota.instances} time(s) every #{quota.periodMultiplier} #{quota.timeFrame}(s)
