--- a/views/home.jade
+++ b/views/home.jade
@@ -3,17 +3,19 @@ extends layout
 block content
     div.row
         div.col-lg-3.col-md-4
-            ul.nav.nav-pills.nav-stacked
-                li
-                    a(href="/") All Systems
-                for system in systems
+            div.panel.panel-default
+                ul.nav.nav-pills.nav-stacked
+                    li.active
+                        a(href="/") All Systems
+                    for system in systems
+                        li
+                            a(href="/?system=" + system._id)=system.name
+            div.panel.panel-default         
+                ul.nav.nav-pills.nav-stacked               
                     li
-                        a(href="/?system=" + system._id)=system.name
-
-                li
-                    a(href="/systems/create") Create System            
-                li
-                    a(href="/systems") Manage Systems
+                        a(href="/systems/create") Create System            
+                    li
+                        a(href="/systems") Manage Systems                
         div.col-lg-9.col-md-8
             div.col-lg-12
                 ul.list-group
