firming up sign up

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ block content
             br
             | using the power of micro-quotas.
         div#kw-signup                                           
-            button.btn.btn-primary#kw-signup-btn(onclick="window.location='/signup'") Sign up for free
+            button.btn.btn-primary#kw-signup-btn(onclick="window.location='/sign/up'") Sign up for free
         div#kw-signin
             small or 
-            a(href="/signin") Sign in
+            a(href="/sign/in") Sign in
