--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,8 +16,9 @@ html
                 div.navbar-collapse.collapse
                     ul.nav.navbar-nav.navbar-right
                         li
-                            a(href="/signout") Sign out
+                            a(href="/sign/out") Sign out
         - }    
         div.content
             block content
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js')
