--- a/views/systems/index.jade
+++ b/views/systems/index.jade
@@ -6,5 +6,5 @@ block content
         ul
             for system in systems
                 li
-                    a(href="/systems/" + system._id)=system.name
+                    a(href="/systems/" + system._id)=system.purpose
             
