--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,5 +11,5 @@ html
         block content
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js')
-    script(src='http://kendo.cdn.telerik.com/2014.2.716/js/kendo.ui.core.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js')
     block scripts
