front end structural changes

--- a/views/newQuota.jade
+++ b/views/newQuota.jade
@@ -1,11 +1,17 @@
-script#newQuotaView(type="text/html")
-    h1 New Quota
-    form(data-bind="submit: create")
-        div.form-group
-            label I will
-            textarea.form-control.kw-input(data-bind="value: action", autofocus) 
-        div.form-group
-            label at least
-            input.form-control.kw-input(data-bind="value: instances" type="number" min="1" max="100")
-            strong time(s) per week        
-        button.btn.btn-primary(type="submit") Create
+extends layoutEx
+
+block view
+    div.col-md-12
+        h1 New Quota
+        form(data-bind="submit: create")
+            div.form-group
+                label I will
+                textarea.form-control.kw-input(data-bind="value: action", autofocus) 
+            div.form-group
+                label at least
+                input.form-control.kw-input(data-bind="value: instances" type="number" min="1" max="100")
+                strong time(s) per week        
+            button.btn.btn-primary(type="submit") Create
+            
+block scripts
+    script(src='/js/newQuota.js')
