--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
     title Kwota.io
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Open+Sans')
-    link(rel='stylesheet', href='/css/default.css')
+    link(rel='stylesheet', href='/css/common.css')
     block links    
   body
     div.container
@@ -12,4 +12,5 @@ html
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js')
+    script(src='/js/common.js')
     block scripts
