fixing multiple attributes message

--- a/views/quotas.jade
+++ b/views/quotas.jade
@@ -27,7 +27,7 @@ block view
                 div(data-bind="foreach: $parent.filledQuotas")
                     div.list-group-item.kw-quota
                         p.pull-right
-                            a(href="##")(data-bind="click: reset")
+                            a(href="##", data-bind="click: reset")
                                 span.glyphicon.glyphicon-repeat.kw-unchecked                                            
                         p
                             | I will 
